fix: Force dark mode.

--- a/style.css
+++ b/style.css
@@ -96,3 +96,20 @@ img#logo {
   max-height: 2em;
   padding: 0.05em 1em;
 } 
+
+::backdrop, :root, main, section {
+    --bg:#212121;
+    --accent-bg:#2b2b2b;
+    --text:#dcdcdc;
+    --text-light:#ababab;
+    --accent:#ffb300;
+    --accent-hover:#ffe099;
+    --accent-text:var(--bg);
+    --code:#f06292;
+    --preformatted:#ccc;
+    --disabled:#111
+  }
+  img, video {
+    opacity:.8
+  }
+}
